Fixed the Headers on the html pages so that the container that holds my name fits the full length of the screen on small devices and has margins on medium to large screens. Also started filling out the README.md.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,24 @@
+/* Font Style and Size for Name and Name of Page */
 h1 {
     font-family: "Times New Roman";
     font-weight: bold;
     font-size: 28px;
  }
-
+/* Font Style and Size for Text Overlay on Portfolio Images */
 h2 {
     font-family: "Times New Roman";
     font-size: 20px;
 }
-
+/* Font Syyle and Size for Footer */
 h3 {
     font-size: 12px;
 }
 
+
 hr {
     width: 95%;
 }
-
+/* Bio Image Sizing */
 #bio-image {
     float: left; 
     margin-right: 20px;
@@ -25,37 +27,38 @@ hr {
     width: auto;
     height: 250px;
 }
-
+/* Margin and Sizing for Portfolio Cards */
 #port-card {
     margin-bottom: 20px;
     margin-left: 10px;
     margin-top: 20px;
     width: 300px;
 }
-
+/* Margins for Text Overlay on Portfolio Images */
 #text-overlay {
     padding: .1px;
     margin-top: 85%;
     margin-right: -1.5px;
 }
-
+/* Content Sizing */
 .content {
-    min-height: calc(92.9vh - 70px);
+    min-height: calc(95vh - 70px);
     padding: 40px 40px 0 40px;
 }
-
+/* Footer Height */
 .footer {
-    height: 50px;
+    height: 50x;
 }
-
+/* Footer Styling */
 footer {
     background-color: grey;
     color: white;
-    padding: 10px;
+    padding: 5px;
 }
 
 /* Medium Media Screens (768 - 992 pixels) */
 @media screen and (max-width: 992px) {
+/* Bio Image Changes Size at Medium Media */
 #bio-image {
     width: 400px;
     height: auto;
@@ -64,13 +67,18 @@ footer {
 
 /* Small Media Screens (576 - 767 pixels) */
 @media screen and (max-width: 767px) {
+/* This Makes the Name Fill the Container Length at Small Media */
+header .container{
+        min-width: 100%;
+}
+/* Bio Image Changes Size at Medium Media */
 #bio-image {
     width: 500px;
     height: auto;
     padding-right: 10px;
     padding-bottom: 10px;
 }
-
+/* Portfolio Cards Changes Size at Medium Media */
 #port-card{
     width: 450px;
     height: auto;
